--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -148,7 +148,7 @@
     })
     .then(data => {
         // Assuming the backend sends a confirmation message or success indicator in the response body
-        document.getElementById('confirmationMessage').textContent = 'Registration successful! Redirecting to login...';
+        document.getElementById('confirmationMessage').textContent = 'Registration successful! Redirecting to login';
         
         // Redirect to the login page after a successful registration
         setTimeout(() => {
